results/scraper/launchpad/1786343
QEMU v3.0.0-rc4 configure fails with --enable-mpath on CentOS 7.5

QEMU v3.0.0-rc4 configure fails with --enable-mpath on CentOS 7.5.

After commit b3f1c8c413bc83e4a2cc7a63e4eddf9fe6449052 "qemu-pr-helper: use new
libmultipath API", QEMU started using new libmultipath API, which is not
available on CentOS 7.5.  Reverting this commit, configure passes.

Steps to reproduce (fails on x86_64 and ppc64le architectures):

  $ git clone git://git.qemu.org/qemu.git
  $ mkdir -p qemu/build && cd qemu/build
  $ ../configure --enable-mpath
  ERROR: Multipath requires libmpathpersist devel

  $ rpm -qa | grep device-mapper | sort
  device-mapper-1.02.146-4.el7.ppc64le
  device-mapper-devel-1.02.146-4.el7.ppc64le
  device-mapper-libs-1.02.146-4.el7.ppc64le
  device-mapper-multipath-0.4.9-119.el7.ppc64le
  device-mapper-multipath-devel-0.4.9-119.el7.ppc64le
  device-mapper-multipath-libs-0.4.9-119.el7.ppc64le

Snippet from config.log:

  funcs: do_compiler do_cc compile_prog main
  lines: 92 125 3580 0
  cc -pthread -I/usr/include/glib-2.0 -I/usr/lib64/glib-2.0/include -m64 -D_GNU_SOURCE -D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE -Wstrict-prototypes -Wredundant-decls -Wall -Wundef -Wwrite-strings -Wmissing-prototypes -fno-strict-aliasing -fno-common -fwrapv -Wendif-labels -Wno-missing-include-dirs -Wempty-body -Wnested-externs -Wformat-security -Wformat-y2k -Winit-self -Wignored-qualifiers -Wold-style-declaration -Wold-style-definition -Wtype-limits -fstack-protector-strong -Wno-missing-braces -I/usr/include/p11-kit-1 -I/usr/include/libpng15 -o config-temp/qemu-conf.exe config-temp/qemu-conf.c -m64 -g -ludev -lmultipath -lmpathpersist
  config-temp/qemu-conf.c: In function ‘main’:
  config-temp/qemu-conf.c:15:5: error: too few arguments to function ‘mpath_lib_init’
       multipath_conf = mpath_lib_init();
       ^
  In file included from config-temp/qemu-conf.c:2:0:
  /usr/include/mpath_persist.h:179:12: note: declared here
   extern int mpath_lib_init (struct udev *udev);
              ^

I'll work on a fix for configure.

Fixed here:
https://git.qemu.org/?p=qemu.git;a=commitdiff;h=1b0578f5c455d5a95384

